[package]
name = "linky-binding"
version = "0.0.1"
edition = "2021"
authors = ["Fulup Le Foll <fulup@iot.bzh>"]
publish = false

[dependencies]
#afbv4 = {git= "https://github.com/redpesk-common/afb-librust", branch="master", optional = true}
afbv4= {path ="/home/fulup/Workspace/Rust/afb-librust/afb-librs"}
serde = { version = "1.0", features = ["derive"] }
serde_json={ version= "1.0"}
liblinky= {path ="../linky-lib"}


[lib]
name = "afb_linky"
crate-type = ["cdylib"]
path = "src/@libso.rs"