[package]
name = "liblinky"
version = "0.0.1"
edition = "2021"
authors = ["Fulup Le Foll <fulup@iot.bzh>"]
publish = false
build = "capi/build.rs"

[dependencies]
#afbv4 = {git= "https://github.com/redpesk-common/afb-librust", branch="master", optional = true}
afbv4 = { path ="../../afb-librust/afb-librs" }
nom = { version = "7", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
serde_json={ version= "1.0"}

[build-dependencies]
bindgen    = ">=0.69"
cc = ">=1.0"

[lib]
name = "linky"
crate-type = ["lib"]
path = "src/@libso.rs"


